--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -47,7 +47,7 @@
 \begin{document}
 \frontmatter
 \pagestyle{empty}
-\newcommand{\sysname}{Holmes}
+\newcommand{\sysname}{Holmes\xspace}
 \title{\bf \sysname}
 \author{Matthew Maurer}
 \Year{2018}
