--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -21,7 +21,7 @@ Previous work in program analysis suggests that logic languages can help to stru
 Datalog has previously been successfully used to analyze programs~\cite{lam2005,brumley2006,alpuente2011,doop1,bddbddb}.
 %   * Shows fact-like representation of program properties is feasible
 While the ability to write analyses directly in logic language is interesting, of more potential importance to the feasability of this project is that they were able to model both their input and output knowledge as logic language predicates successfully.
-A wide variety of properties from aliasing in binary code~\cite{brumley2006} to security properties such as SQL injectability and cross site scriptability (XSS)~\cite{lam2005} have been modeled as facts in a deductive database, suggesting this as a potential common representation.
+A wide variety of properties from aliasing in compiled code~\cite{brumley2006} to security properties such as SQL injectability and cross site scriptability (XSS)~\cite{lam2005} have been modeled as facts in a deductive database, suggesting this as a potential common representation.
 Dataflow analyses are also representable~\cite{mcallester2002} in this way.
 
 % * Analysis Integration improved results
