--- a/thesis/alias/intro.tex
+++ b/thesis/alias/intro.tex
@@ -14,8 +14,8 @@ However, there are tools for finding such bugs in \emph{source} code.
 Requiring source code limits the applicability of these techniques to developers with full source access.
 
 In this chapter, we focus on the question
-``Can we use \sysname\ to bridge the gap between analysis for UaF bugs in source code versus binary code?''
-In particular, previous work has been unable to apply source code techniques to binary code.
+``Can we use \sysname\ to bridge the gap between analysis for UaF bugs in source code versus compiled code?''
+In particular, previous work has been unable to apply source code techniques to compiled code.
 Can we adapt such techniques to be effective even without source?
 
 At a high level, UaF bugs require reasoning about memory allocation and memory aliasing.
@@ -24,11 +24,11 @@ In comparison, at the binary level the primary approach for reasoning about memo
 For example, GUEB~\cite{gueb} was proposed to detect UaF bugs using VSA, but is handicapped by disallowing cyclic paths to allow rapid termination of VSA.
 
 We present a new binary-level static analysis approach for detecting UaF bugs in executable programs.
-One of the main technical challenges we address is showing how to adapt source-code memory alias analysis to binary code, where previous work has instead created all-new binary-only approaches to alias
+One of the main technical challenges we address is showing how to adapt source-code memory alias analysis to compiled code, where previous work has instead created all-new binary-only approaches to alias
 analysis like VSA.
 We experiment with two classes of analysis: flow insensitive alias analysis via a Steensgaard-type~\cite{steensgaard-alias} algorithm, and  flow-sensitive alias analysis using a data flow approach adapted from Andersen~\cite{andersen} style analysis with added rules to handle binary-specific details such as calling conventions and computed addresses.
 We also add context-sensitivity by allowing the analysis to reason about the call-stack discipline followed by executable code, and a type of field sensitivity appropriate for direct pointer arithmetic without type information.
-To the best of our knowledge, very little work has been done in applying the literature in source alias analysis to binary code, and no previous work has shown how to then use such techniques to find UaF bugs statically in binary code.
+To the best of our knowledge, very little work has been done in applying the literature in source alias analysis to compiled code, and no previous work has shown how to then use such techniques to find UaF bugs statically in compiled code.
 
 We have built a tool called \aliasname\ that uses \sysname\ to drive the different levels and co-dependencies in binary analysis, alias analysis, and UaF detection.
 Taking this approach allows us to have an end-to-end reasoning chain from input binary to why this particular candidate use-after-free could not be disproven with a given sensitivity.
