--- a/thesis/bitr/related.tex
+++ b/thesis/bitr/related.tex
@@ -23,7 +23,7 @@ Another work focusing primarily on structure recovery~\cite{comprecon} approache
 \subsection{Type Theory}
 Some of the inspiration for this form of type characterization \S\ref{sec:typesys} came from intersection typing~\cite{Jim1995,Shao1993}. Though we did not end up using intersection types for inferrability purposes (even the decidability of the inference turns out to be difficult and limited~\cite{interdecide}), this work informed our choice of a constraint-intersection \S\ref{sec:infmeth} approach instead of type-intersection approach.
 
-Earlier efforts to generate typed assembly~\cite{tal,stal} also bear similarity to our work. Typed assembly language methodologies are attempting to assign types to the registers in binary code during compilation. Some of the TAL ideas are applicable, and still others could potentially help in future reconstruction work as safer types. However, the majority are inappropriate for the work because code must be generated to conform to the system, rather than the system describing the code.
+Earlier efforts to generate typed assembly~\cite{tal,stal} also bear similarity to our work. Typed assembly language methodologies are attempting to assign types to the registers in compiled code during compilation. Some of the TAL ideas are applicable, and still others could potentially help in future reconstruction work as safer types. However, the majority are inappropriate for the work because code must be generated to conform to the system, rather than the system describing the code.
 
 \subsection{Decompilation}
 One of the main applications for type reconstruction is decompilation. Some approaches~\cite{tydecomp} even suggest that the type reconstruction can help guide the decompilation itself rather than simply being a set of annotations applied at the end. This idea has existed~\cite{dolgova2009automatic} in decompilation for a while, but progress has been slow. More recent decompilers~\cite{phoenix} have used some of the other research~\cite{tie} in the area to improve their results as well. Given the poor state of affairs in Hex-Rays~\cite{ida}, more work in this field could improving the usability of much of the decompiler work would not be surprising.
