--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -15,6 +15,6 @@ Recovering non-trivial control flow requires value analysis to resolve jump targ
 One variety of value analysis (alias analysis) is sometimes done using type information.
 While co-dependency is most prevalent in control flow analysis, it finds its way into nearly every part of binary analysis.
 
-In this thesis I have implemented \sysname, a datalog dialect suited to this task of knitting together co-dependent analyses, and formally defined its operation.
-I demonstrate the system's effectiveness concretely by implmenting a use-after-free detector over binaries.
-I further present a binary type recovery system which despite not being written with \sysname\ in mind, is still structured such that it would be amenable to integration.
+In this thesis we have implemented \sysname, a datalog dialect suited to this task of knitting together co-dependent analyses, and formally defined its operation.
+We demonstrate the system's effectiveness concretely by implmenting a use-after-free detector over binaries.
+We further present a binary type recovery system which despite not being written with \sysname\ in mind, is still structured such that it would be amenable to integration.
