--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -13,7 +13,7 @@ Considering the graph representation again, LLVM's model is a DAG.
 Jakstab~\cite{jakstab} takes the approach of running their analyses to a fixed point.
 As Jakstab does not explicitly encode dependencies between analysis, the graph of execution dependencies looks like a single cycle.
 A natural extension then is to allow the expression of dependencies, as in LLVM, but also cycles, as in Jakstab.
-This full graph model of analysis management is what I intend to investigate in my thesis.
+This full graph model of analysis management is what we intend to investigate in my thesis.
 
 % Past work sets the stage for / encourages this
 Previous work in program analysis suggests that logic languages can help to structure this problem.
@@ -51,34 +51,34 @@ Co-dependence in compiled program analysis can be represented in a logic languag
 % * Show the power by
 %   * Implementing the integration of several real analyses using the language
 %   * Attempting to do so without using circumscription or aggregation, and seeing what happens.
-I investigated this approach by designing implementing \sysname, a logic language engine designed for the integration of binary analyses.
-For this purpose I invented a novel form of negation, based on circumscription~\cite{circumscription}, which is suited to this particular application (\S~\ref{holmes:sec:circ}).
+We investigated this approach by designing implementing \sysname, a logic language engine designed for the integration of binary analyses.
+For this purpose we invented a novel form of negation, based on circumscription~\cite{circumscription}, which is suited to this particular application (\S~\ref{holmes:sec:circ}).
 This negation can further be allowed to make progress from failed hypotheses (\S~\ref{holmes:sec:callcc}).
 This adaptation allows Holmes to resolve an output even in the case of a negation cycle, as would be the case with a co-dependent control flow recovery and a value analysis assuming completeness of the control flow graph.
 This is concretely the case in the use of VSA to resolve function pointers.
-I also investigated different implementation approaches for \sysname (\S~\ref{holmes:sec:impl}).
+We also investigated different implementation approaches for \sysname (\S~\ref{holmes:sec:impl}).
 
-I define the semantics of the resulting logic language in terms of a Kripke structure (\S~\ref{chap:formal}).
+We define the semantics of the resulting logic language in terms of a Kripke structure (\S~\ref{chap:formal}).
 These semantics enhance the ability to reason about the results of an analysis by formally constraining what derivations the analysis engine is allowed to make.
 They also make it possible to determine compliance for alternative implementations of the engine, potentially allowing programs to run on backends other than the initial one written for this thesis.
 
-I show that \sysname can implement different sensitivities of alias analysis, and show how this affects practical use-after-free classification (\S~\ref{chap:alias}).
-I implemented codependent alias analysis, use-after-free detection, and control flow recovery using \sysname.
+We show that \sysname can implement different sensitivities of alias analysis, and show how this affects practical use-after-free classification (\S~\ref{chap:alias}).
+We implemented codependent alias analysis, use-after-free detection, and control flow recovery using \sysname.
 This implementation provides evidence for the feasibility of using a logic language as an integration layer for cyclically dependent analyses.
 This concrete bug finding tool demonstrates the applicability of the \sysname language to the domain of compiled-code program analysis.
-I translate analysis techniques from the compiler and program analysis communities into analysis of compiled code (\S~\ref{alias:sec:system}).
-I measure the performance cost and precision benefits of different sensitivities of alias analysis by leveraging the modularity of the \sysname-based implementation (\S~\ref{alias:sec:eval}).
+We translate analysis techniques from the compiler and program analysis communities into analysis of compiled code (\S~\ref{alias:sec:system}).
+We measure the performance cost and precision benefits of different sensitivities of alias analysis by leveraging the modularity of the \sysname-based implementation (\S~\ref{alias:sec:eval}).
 
-I present a type recovery mechanism for compiled code which would be well suited to a Holmes-based implementation (\S~\ref{chap:bitr}).
+We present a type recovery mechanism for compiled code which would be well suited to a Holmes-based implementation (\S~\ref{chap:bitr}).
 This demonstrates that even work written without \sysname in mind may be naturally translatable into a Holmes implementation.
-I define a \emph{descriptive} type system, more powerful than direct C types for performing inference, wile being more flexible than a traditional prescriptive type system (\S~\ref{sec:typesys}).
-I address the problem of inconsistent type constraints by suggesting a resolution system which seeks a solution in which it drops the fewest constraints (\S~\ref{sec:infmeth}).
+We define a \emph{descriptive} type system, more powerful than direct C types for performing inference, wile being more flexible than a traditional prescriptive type system (\S~\ref{sec:typesys}).
+We address the problem of inconsistent type constraints by suggesting a resolution system which seeks a solution in which it drops the fewest constraints (\S~\ref{sec:infmeth}).
 Finally, previous work in type recovery used a metric which minimized the importance of correct recovery of structure types.
-In \S~\ref{subsec:metrics}, I provide a novel metric for type recovery based on the probability of correctness of any individual query by a reverse engineer or downstream analysis.
+In \S~\ref{subsec:metrics}, we provide a novel metric for type recovery based on the probability of correctness of any individual query by a reverse engineer or downstream analysis.
 
-I give a methodology, implemented in Tachyon, for testing patches live, once a Holmes-based system locates a bug (\S~\ref{chap:tachyon}).
+We give a methodology, implemented in Tachyon, for testing patches live, once a Holmes-based system locates a bug (\S~\ref{chap:tachyon}).
 Tachyon demonstrates the ability to perform live testing of minor patches via \emph{stream rewriting} of the system calls for compatibility, with no effect on real infrastructure (\S~\ref{tach:sec:equiv}).
 While both the patched and unpatched versions run, a policy-chosen leader program actually touches the production environment, while the follower program has the events of the leader program replayed to it and checked for loose compatibility.
 Benchmarking reveals that this trace-and-rewrite link has minimal overhead compared to running both patched and unpatched programs: (\S~\ref{tach:sec:eval}).
 
-I conclude that \sysname does address the problem of co-dependence in program analysis and allow analyses to be specified in a modular fashion(\S~\ref{sec:conc}).
+We conclude that \sysname does address the problem of co-dependence in program analysis and allow analyses to be specified in a modular fashion(\S~\ref{sec:conc}).
