--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 Bugs in software can cause significant damage.
-The bulk of modern software is distributed in binary-only form, for reasons ranging from a desire to keep proprietary information secret to wanting to avoid compilation or interpretation overhead on the client.
+Some software is distributed in binary-only form, for reasons ranging from a desire to keep proprietary information secret to wanting to avoid compilation or interpretation overhead on the client.
 Unfortunately, inspecting the behavior of machine code is difficult:
 It is undecidable for pathological cases and difficult to approximate in common ones.
 
