--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -35,8 +35,8 @@
 %I'll need to double space it for submission, but double
 %spacing is a terrible relic of a time gone by, and hurts
 %my eyes, so we'll turn it on later.
-%\usepackage{setspace}
-%\doublespacing
+\usepackage{setspace}
+\doublespacing
 \usepackage[
   backref,pageanchor=true,plainpages=false, pdfpagelabels, bookmarks,bookmarksnumbered,
   final
@@ -92,6 +92,7 @@ Manuel Egele, Boston University
 \input{conclusion}
 
 \backmatter
+\singlespacing
 \renewcommand{\bibsection}{\chapter{\bibname}}
 \bibliographystyle{plain}
 \bibliography{thesis,bitr/BiTR-0,tachyon/tachyon}
