Pre-defense tweaks

--- a/thesis/alias/eval.tex
+++ b/thesis/alias/eval.tex
@@ -72,7 +72,7 @@ Program & Sensitivity & Run time & Memory & False Positives & Binary Size\\
 	\begin{center}
 	\begin{tabular}{|c||c|c|c||c|c|c||c|}
 		\hline
-		Sensitivity & \multicolumn{3}{c||}{Run time} & \multicolumn{3}{c||}{Memory} & Bug Candidates\\
+		Sensitivity & \multicolumn{3}{c||}{Run time} & \multicolumn{3}{c||}{Memory} & Alarms \\
 		\hline
 		& Avg & Median & Stdev & Avg & Median & Stdev  &Avg\\
 		\hline\hline
