--- a/thesis/tachyon/design.tex
+++ b/thesis/tachyon/design.tex
@@ -110,7 +110,7 @@ simple cases; several syscalls have complicated dependencies between
 input and output parameters, as will be discussed later in~\S\ref{tach:sec:types}.
 
 \tachyon addresses the challenges associated with understanding the
-semantics of syscalls by adding type annotations, as described in~\S\ref{tach:sec:types}. The \tachyon 
+syscall semantics by adding type annotations, as described in~\S\ref{tach:sec:types}. The \tachyon 
 annotation language is a light-weight dependent type system that says
 how to parse the inputs and arguments into semantic data at runtime.
 These type annotations only need to be written once per system call,
