--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -58,7 +58,9 @@
 \copyrightpage
 %\approvalpage
 
+\pagestyle{plain}
 \section*{Acknowledgements}
+\setcounter{page}{3}
 % Must contain:
 % Advisor
 % Members of committee
@@ -66,7 +68,8 @@
 This thesis work was advised by David Brumley.
 Other members of the committee include Frank Pfenning (CMU CS), Maunel Egele (BU ECE), and Lujo Bauer (CMU ECE).
 
-
+This work was funded by DARPA award N660011324040 and NSF award DGE1419362.
+The views and opinions of authors expressed herein do not necessarily state or reflect those of the United States Government or any agency thereof.
 
 % Also want to thank Maverick, Kyle, who else? This stuff can go in during the final revisions period though.
 
